# Team_Nodemon

./: .gitignore  Readme.md  license
App/Nodemon_RiderApp/: App.js  app.json  index.js  package-lock.json  package.json
App/Nodemon_RiderApp/android/: .project  settings.gradle
App/Team_Nodemon_App/: .gitignore  .prettierrc.js  App.js  app.json  index.js  package-lock.json  package.json
Backend/: .env  1.js  api_fcm.js  app.js  package-lock.json  package.json  swagger.yaml
Backend/auth/: auth.js
Backend/controllers/: rider.js  shop.js  user.js
Backend/database/: database.js
Backend/models/: delivery_boy.js  delivery_boy_history.js  init-models.js  order_history.js  products.js  shop.js  shop_active_orders.js  shopkeeper.js  tags.js  user.js
Backend/routes/: routes.js
ML/: .gitignore  Tag based Reco sys.ipynb  install.sh  run.sh
ML/Recommendation_sys/: Order History.ipynb  Recurring Orders.ipynb  Tag based Reco sys.ipynb  Tag based searching.ipynb  main.py  ml_api.py  pyproject.toml
ML/Recommendation_sys/apriori/: check.py  connect_db.py  data_processing.py  main.py
ML/Recommendation_sys/product_based_search/: data_processing.py
ML/Recommendation_sys/recurring_orders/: data_processing.py  main.py  recurr.py
ML/Recommendation_sys/tag_based/: clustering.py  connect_db.py  cos_similarity_vector.py  data_processing.py  main.py  model_train.py  predict.py  retrain.py
ML/Recommendation_sys/tag_based_search/: check_tags.py  data_processing.py  main.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
(+74 files in other folders)
