[tool.poetry]
name = "Recommendation_sys"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^0.24.2"
pandas = "^1.3.2"
mysql-connector = "^2.2.9"
python-dotenv = "^0.19.0"
fastapi = {extras = ["all"], version = "^0.68.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
